# kensho

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  import-more-data.py  load-sample-data.sh  package-lock.json  package.json  rustfmt.toml  test-auth-api.sh  test-data-import.py  test-infrastructure.sh  test-json-validation.sh  test-middleware.sh  test_redis.rs
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  TEST_SUMMARY.md  package.json
backend/k6/: README.md
backend/k6/scenarios/: auth-flow.js  normal-load.js  spike-test.js  stress-test.js
backend/postman/: README.md  kensho-api.postman_collection.json  kensho-local.postman_environment.json  test-api.sh
backend/src/: lib.rs  main.rs
backend/src/api/: routes.rs
backend/src/api/handlers/: anime.rs  auth.rs  browse.rs  episodes.rs  health.rs  logs.rs  mod.rs  search.rs  stream.rs
backend/src/cli/: db_init.rs  ingest.rs  mod.rs
backend/src/db/: connection.rs
backend/src/middleware/: auth.rs  cors.rs  error.rs  json_extractor.rs  logging.rs  mod.rs  rate_limit.rs
backend/src/models/: anime.rs  anime_database.rs  anime_offline_db.rs  episode.rs  mod.rs  relationships.rs  session.rs  tag.rs  tests.rs
backend/src/services/: auth.rs  cache.rs  crunchyroll_wrapper.rs  data_loader.rs  database.rs  database_simplified.rs  database_v2.rs  health.rs  metadata.rs  mod.rs  resilient.rs  search.rs  streaming.rs
backend/tests/: test_ingest.rs
backend/tests/common/: mod.rs
backend/tests/contract/: common.rs  mod.rs  test_anime_get.rs  test_auth_login.rs  test_auth_logout.rs  test_auth_refresh.rs  test_browse_season.rs  test_episodes_get.rs  test_search.rs  test_stream.rs
backend/tests/integration/: common.rs  mod.rs  test_auth_flow.rs  test_performance.rs  test_search_scenario.rs  test_seasonal_browse.rs  test_session.rs  test_streaming.rs
frontend/: .env.example  Cargo.toml  DIOXUS_0.5_STATUS.md  FRONTEND_STATUS.md  README.md  Trunk.toml  fix_dioxus_0.5.sh  index.html  test_console.html
frontend/src/: main.rs  main_full.rs  main_simple.rs
frontend/src/components/: anime_card.rs  episode_list.rs  ip_hub.rs  mod.rs  navbar.rs  search_bar.rs  video_player.rs
frontend/src/models/: mod.rs
frontend/src/pages/: browse.rs  home.rs  login.rs  mod.rs  series.rs
frontend/src/services/: api.rs  auth.rs
frontend/tests/e2e/: README.md  mod.rs  run_tests.sh  test_user_journey.rs  test_utils.rs  user_journey.rs
specs/001-project-kensh-poc/: data-model.md  implementation-guide.md  implementation-roadmap.md  plan.md  quickstart.md  research-tasks.md  research.md  spec.md  tasks-enhanced.md  tasks.md
specs/001-project-kensh-poc/contracts/: openapi.yaml
