[workspace]
members = ["backend", "frontend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kenshō Team"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"