[package]
name = "kensho-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dioxus for WASM
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-router = "0.4"

# Async runtime for WASM
wasm-bindgen-futures = "0.4"

# HTTP client
gloo-net = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlVideoElement",
    "Window",
    "Storage",
    "MediaSource",
    "SourceBuffer",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Performance",
    "PerformanceTiming"
] }
js-sys = "0.3"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

# Local storage
gloo-storage = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
